# oppt

./: .gitignore  .pre-commit-config.yaml  BRR.py  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  install_dependencies.sh  pyproject.toml  setup.py  setup.sh  test.py
src/: CMakeLists.txt  bindings.cpp
src/oppt/: CMakeLists.txt  defs.hpp  global.cpp  global.hpp
src/oppt/filter/: CMakeLists.txt
src/oppt/filter/particleFilter/: ParticleFilter.cpp  ParticleFilter.hpp
src/oppt/gazeboInterface/: CMakeLists.txt  GazeboInterface.cpp  GazeboInterface.hpp  GazeboSubscriber.cpp  GazeboSubscriber.hpp  ServerInterface.cpp  ServerInterface.hpp  SetSpaceInformationGZEight.cpp
src/oppt/gazeboInterface/gazebo/: OpptJoint.hpp  OpptODEJoint.hpp  OpptODELink.hpp  OpptODEPhysics.cpp  OpptODEPhysics.hpp  World.cpp  World.hpp
src/oppt/gazeboInterface/sensors/: DepthSensor.cpp  DepthSensor.hpp  GPSSensor.cpp  GPSSensor.hpp  GazeboSensor.cpp  GazeboSensor.hpp  RaySensor.cpp  RaySensor.hpp  SensorInterface.cpp  SensorInterface.hpp
src/oppt/opptCore/: Action.hpp  ActionInformation.hpp  Body.hpp  CMakeLists.txt  CollisionObject.hpp  CollisionReport.hpp  CollisionRequest.hpp  Distribution.hpp  EnvironmentInfo.hpp  Filter.hpp  Goal.hpp  HeuristicInfo.hpp  MathUtils.hpp  Observation.hpp  ObservationInformation.hpp  ObservationReport.hpp  OpptUserData.hpp  PropagationReport.hpp  RobotState.hpp  RobotStateUserData.hpp  SDFToURDF.hpp  Scene.hpp  SpaceComponents.hpp  SpaceInformation.hpp  StateInformation.hpp  UID.hpp  ValidityReport.hpp  Viewer.hpp  constants.hpp  core.hpp  includes.hpp  logging.hpp  trajectory.hpp  typedefs.hpp  utils.hpp
src/oppt/opptCore/geometric/: Box.hpp  Cylinder.hpp  Geometry.hpp  Mesh.hpp  Pose.hpp  Sphere.hpp
src/oppt/opptCore/resources/: resources.hpp
src/oppt/options/: CMakeLists.txt  Options.hpp  option_parser.cpp  option_parser.hpp
src/oppt/options/inih/: ini.h
src/oppt/options/tclap/: Arg.h  ArgException.h  ArgTraits.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StandardTraits.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  XorHandler.h  ZshCompletionOutput.h
src/oppt/plugin/: Plugin.hpp  PluginOptions.hpp
src/oppt/problemEnvironment/: CMakeLists.txt  ChangesParser.cpp  ChangesParser.hpp  ProblemEnvironment.hpp  ProblemEnvironmentOptions.hpp  SimulationResult.hpp  StepResult.hpp
src/oppt/robotEnvironment/: Body.cpp  CMakeLists.txt  CollisionFunction.cpp  CollisionObject.cpp  RobotEnvironment.cpp  SDFParser.cpp  SceneImpl.cpp
src/oppt/robotEnvironment/geometric/: Box.cpp  Cylinder.cpp  Geometry.cpp  Mesh.cpp
src/oppt/robotEnvironment/include/: EnvironmentChanges.hpp  RobotEnvironment.hpp  SDFParser.hpp  SceneImpl.hpp
src/oppt/robotHeaders/: Action.hpp  ActionSpace.hpp  ActionSpaceDiscretizer.hpp  LimitsContainer.hpp  Metric.hpp  Observation.hpp  ObservationSpace.hpp  ObservationSpaceDiscretizer.hpp  RobotConfigOptions.hpp  RobotSDFParser.hpp  RobotSerializer.hpp  RobotSpaceInformationFactory.hpp  RobotState.hpp  Serializer.hpp  StateSpace.hpp  robot.hpp  utils.hpp
src/oppt/robotHeaders/InverseKinematics/: IKSolver.hpp  InverseKinematics.hpp
src/oppt/robots/: Action.cpp  ActionSpaceDiscretizer.cpp  CMakeLists.txt  ContinuousActionSpace.cpp  ContinuousVectorActionSpace.cpp  Observation.cpp  ObservationSpace.cpp  ObservationSpaceDiscretizer.cpp  RobotSDFParser.cpp  RobotSerializer.cpp  RobotSpaceInformationFactory.cpp  RobotState.cpp
src/oppt/robots/InverseKinematics/: IKSolver.cpp  InverseKinematics.cpp
src/oppt/solver/: CMakeLists.txt  solver.hpp
src/oppt/utils/: CMakeLists.txt  Sampler.cpp
src/oppt/utils/include/: Sampler.hpp  filesystemUtils.hpp
src/oppt/viewerPublisher/: CMakeLists.txt  Parser.hpp  SDFParser.hpp  ViewerPublisher.cpp  ViewerPublisher.hpp
src/oppt_py/: __init__.py
src/plugins/heuristicPlugins/CarMazeRRTHeuristicPlugin/: CMakeLists.txt  CarMazeRRTHeuristicPlugin.cpp  RRTHeuristicOptions.hpp
src/plugins/heuristicPlugins/DefaultHeuristicPlugin/: CMakeLists.txt  DefaultHeuristicPlugin.cpp
src/plugins/heuristicPlugins/ManipulatorRRTHeuristicPlugin/: CMakeLists.txt  ManipulatorRRTHeuristicPlugin.cpp  RRTHeuristicOptions.hpp
src/plugins/heuristicPlugins/RocksampleHeuristicPlugin/: CMakeLists.txt  RocksampleHeuristicOptions.hpp  RocksampleHeuristicPlugin.cpp
src/plugins/initialBeliefPlugins/DefaultInitialBeliefPlugin/: CMakeLists.txt  DefaultInitialBeliefOptions.hpp  DefaultInitialBeliefPlugin.cpp
src/plugins/initialBeliefPlugins/RocksampleInitialBeliefPlugin/: CMakeLists.txt  RocksampleInitialBeliefOptions.hpp  RocksampleInitialBeliefPlugin.cpp
src/plugins/observationPlugins/DefaultObservationPlugin/: CMakeLists.txt  DefaultObservationPlugin.cpp  DefaultObservationPluginOptions.hpp
src/plugins/observationPlugins/DubinObservationPlugin/: CMakeLists.txt  DubinObservationPlugin.cpp  DubinObservationPluginOptions.hpp
src/plugins/observationPlugins/RocksampleObservationPlugin/: CMakeLists.txt  RocksampleObservationPlugin.cpp  RocksampleObservationPluginOptions.hpp
src/plugins/rewardPlugins/DefaultRewardPlugin/: CMakeLists.txt  DefaultRewardOptions.hpp  DefaultRewardPlugin.cpp
src/plugins/rewardPlugins/RocksampleRewardPlugin/: CMakeLists.txt  RocksampleRewardOptions.hpp  RocksampleRewardPlugin.cpp
src/plugins/terminalPlugins/DefaultTerminalPlugin/: CMakeLists.txt  DefaultTerminalOptions.hpp  DefaultTerminalPlugin.cpp  GoalParser.hpp
src/plugins/terminalPlugins/RocksampleTerminalPlugin/: CMakeLists.txt  RocksampleTerminalPlugin.cpp
src/solvers/: CMakeLists.txt
src/solvers/ABT/: ABTOptions.hpp  CMakeLists.txt  main_abt_dubin.cpp  main_abt_robot.cpp  solverABT.hpp
src/solvers/ABT/robotModel/: ActionPool.cpp  (+25 more)
src/tools/: CMakeLists.txt  PlayVideo.hpp  ShowScene.cpp  ShowScene.hpp  playVideo.cpp
src/viewer/: CMakeLists.txt  CommandTypes.hpp  RvizInterface.hpp  main.cpp
(+425 files in other folders)
