[build-system]
requires = ["scikit-build-core[pyproject]>=0.7.0"]
build-backend = "scikit_build_core.build"

[project]
name = "oppt_py"
version = "0.0.1"
description = "Python bindings for OPPT (CMake/pybind11)"
authors = [{ name = "Your Name" }]
requires-python = ">=3.7"

[tool.scikit-build]
wheel.packages = ["oppt_py"]
minimum-version = "0.7"

[tool.scikit-build.cmake]
args = [
  "-DCMAKE_PREFIX_PATH=/usr/local"
]
source-dir = "."
