[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"

[project]
name = "oppt_py"
version = "0.0.1"
description = "Python bindings for OPPT (CMake/pybind11)"
authors = [{ name = "Your Name" }]
requires-python = ">=3.7"
